# python-more-decorators

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/semantic-release/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml
_modules/: index.html
_modules/more_decorators/: runtime_defaults.html
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/more_decorators/: index.rst.txt
_sources/autoapi/more_decorators/runtime_defaults/: index.rst.txt
autoapi/: index.html
autoapi/more_decorators/: index.html
autoapi/more_decorators/runtime_defaults/: index.html
docs/: conf.py
more_decorators/: runtime_defaults.py
tests/: test_runtime_defaults.py
